force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Del Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>