force-app/main/default/objects/Activity/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>ActivityDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>