force-app/main/default/objects/Activity/fields/Ad_name__c.field-meta.xml
<CustomField>
    <fullName>Ad_name__c</fullName>
    <label>Ad name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>