force-app/main/default/objects/Activity/fields/Ameyo_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Ameyo_Agent_Id__c</fullName>
    <label>Del_Ameyo Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>