force-app/main/default/objects/Activity/fields/Anarock_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Anarock_Sourcing_Manager__c</fullName>
    <label>Del_CTA Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>