force-app/main/default/objects/Activity/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <label>Del Booked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>