force-app/main/default/objects/Activity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Del Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 0.20 Cr</fullName>
            </value>
            <value>
                <fullName>0.20 Cr – 0.30 Cr</fullName>
            </value>
            <value>
                <fullName>0.30 Cr – 0.40 Cr</fullName>
            </value>
            <value>
                <fullName>0.40 Cr – 0.50 Cr</fullName>
            </value>
            <value>
                <fullName>0.50 Cr – 0.60 Cr</fullName>
            </value>
            <value>
                <fullName>0.60 Cr – 0.70 Cr</fullName>
            </value>
            <value>
                <fullName>0.70 Cr – 0.80 Cr</fullName>
            </value>
            <value>
                <fullName>0.80 Cr – 0.90 Cr</fullName>
            </value>
            <value>
                <fullName>0.90 Cr – 1 Cr</fullName>
            </value>
            <value>
                <fullName>1 Cr – 1.10 Cr</fullName>
            </value>
            <value>
                <fullName>1.10 Cr – 1.20 Cr</fullName>
            </value>
            <value>
                <fullName>1.20 Cr – 1.30 Cr</fullName>
            </value>
            <value>
                <fullName>1.30 Cr – 1.40 Cr</fullName>
            </value>
            <value>
                <fullName>1.40 Cr – 1.50 Cr</fullName>
            </value>
            <value>
                <fullName>1.50 Cr – 1.60 Cr</fullName>
            </value>
            <value>
                <fullName>1.60 Cr – 1.70 Cr</fullName>
            </value>
            <value>
                <fullName>1.70 Cr – 1.80 Cr</fullName>
            </value>
            <value>
                <fullName>1.80 Cr – 1.90 Cr</fullName>
            </value>
            <value>
                <fullName>1.90 Cr – 2 Cr</fullName>
            </value>
            <value>
                <fullName>2 Cr – 2.25 Cr</fullName>
            </value>
            <value>
                <fullName>2.25 Cr – 2.50 Cr</fullName>
            </value>
            <value>
                <fullName>2.50 Cr – 2.75 Cr</fullName>
            </value>
            <value>
                <fullName>2.75 Cr – 3 Cr</fullName>
            </value>
            <value>
                <fullName>&gt; 3 Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>