force-app/main/default/objects/Activity/fields/Call_Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Association_Type__c</fullName>
    <label>Del_Call Association Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>