force-app/main/default/objects/Activity/fields/Call_Disposition_Custom__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_Custom__c</fullName>
    <label>Call Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account/ADF/Tax Statement</fullName>
            </value>
            <value>
                <fullName>Activate DND on my account</fullName>
            </value>
            <value>
                <fullName>Add/remove/edit applicants</fullName>
            </value>
            <value>
                <fullName>Agreement clauses</fullName>
            </value>
            <value>
                <fullName>Amount paid not reflecting/incorrect</fullName>
            </value>
            <value>
                <fullName>Bank Account details for making payment</fullName>
            </value>
            <value>
                <fullName>Book another unit/upgrade to new unit</fullName>
            </value>
            <value>
                <fullName>Call disconnected</fullName>
            </value>
            <value>
                <fullName>Can&apos;t login - forgot username/password</fullName>
            </value>
            <value>
                <fullName>Cancellation process</fullName>
            </value>
            <value>
                <fullName>Cancellation Refund request</fullName>
            </value>
            <value>
                <fullName>Cancellation request</fullName>
            </value>
            <value>
                <fullName>Clarification of documents received</fullName>
            </value>
            <value>
                <fullName>Clarification on Demand Letter</fullName>
            </value>
            <value>
                <fullName>Clarification on payment receipt</fullName>
            </value>
            <value>
                <fullName>Collection email</fullName>
            </value>
            <value>
                <fullName>Compensation for delay in possession</fullName>
            </value>
            <value>
                <fullName>Demand due date and outstanding amount</fullName>
            </value>
            <value>
                <fullName>Demand Letter</fullName>
            </value>
            <value>
                <fullName>DND active but promotion received</fullName>
            </value>
            <value>
                <fullName>Documents required on registration day</fullName>
            </value>
            <value>
                <fullName>Duplicate demand letter</fullName>
            </value>
            <value>
                <fullName>Error while login</fullName>
            </value>
            <value>
                <fullName>Excess Refund request</fullName>
            </value>
            <value>
                <fullName>Expected possession date</fullName>
            </value>
            <value>
                <fullName>Flat readiness for possession (fully paid)</fullName>
            </value>
            <value>
                <fullName>Flat readiness for possession post PDL + 60 days (High End)</fullName>
            </value>
            <value>
                <fullName>Getting the registered agreement</fullName>
            </value>
            <value>
                <fullName>GST charged on my account</fullName>
            </value>
            <value>
                <fullName>Home loan services provided by Runwal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>