force-app/main/default/objects/Activity/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <formula>IF(ISBLANK(CallDurationInSeconds),null,


IF((MOD((CallDurationInSeconds)/60,1)*60) &gt; 10,


TEXT(FLOOR( (CallDurationInSeconds)/60)) + &quot; Min: &quot; + TEXT( FLOOR(MOD((CallDurationInSeconds)/60,1)*60) ) + &quot; Sec&quot;,


TEXT(FLOOR( (CallDurationInSeconds)/60)) + &quot; Min: 0&quot; + TEXT( FLOOR(MOD((CallDurationInSeconds)/60,1)*60) ) + &quot; Sec&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration</label>
    <type>Text</type>
</CustomField>