force-app/main/default/objects/Activity/fields/Call_Proposed_date_of_visit__c.field-meta.xml
<CustomField>
    <fullName>Call_Proposed_date_of_visit__c</fullName>
    <label>Del Call Proposed date of visit</label>
    <type>DateTime</type>
</CustomField>