force-app/main/default/objects/Activity/fields/Call_Rating__c.field-meta.xml
<CustomField>
    <fullName>Call_Rating__c</fullName>
    <label>Del Call Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked (5)</fullName>
            </value>
            <value>
                <fullName>Blocked (5)</fullName>
            </value>
            <value>
                <fullName>Hot (4)</fullName>
            </value>
            <value>
                <fullName>Warm (3)</fullName>
            </value>
            <value>
                <fullName>Cold (2)</fullName>
            </value>
            <value>
                <fullName>Lost (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>