force-app/main/default/objects/Activity/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Not Connected</fullName>
            </value>
            <value>
                <fullName>DND</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Number Busy</fullName>
            </value>
            <value>
                <fullName>Tele-Meeting Done</fullName>
            </value>
            <value>
                <fullName>Junk Enquiry</fullName>
            </value>
            <value>
                <fullName>Welcome call</fullName>
            </value>
            <value>
                <fullName>Pre Intimation of  upcoming  demand</fullName>
            </value>
            <value>
                <fullName>Demand Letter Sent</fullName>
            </value>
            <value>
                <fullName>Collection Follow up</fullName>
            </value>
            <value>
                <fullName>Error in demand letter</fullName>
            </value>
            <value>
                <fullName>Error in Receipt</fullName>
            </value>
            <value>
                <fullName>Error in Agreement</fullName>
            </value>
            <value>
                <fullName>Request for Registering</fullName>
            </value>
            <value>
                <fullName>Payment Extension</fullName>
            </value>
            <value>
                <fullName>SDR details sent</fullName>
            </value>
            <value>
                <fullName>Customisation Request</fullName>
            </value>
            <value>
                <fullName>Pre Intimation of possession demand</fullName>
            </value>
            <value>
                <fullName>Possession Intimation</fullName>
            </value>
            <value>
                <fullName>Client Query</fullName>
            </value>
            <value>
                <fullName>Will Refer later</fullName>
            </value>
            <value>
                <fullName>Not Interested to Refer</fullName>
            </value>
            <value>
                <fullName>Possession  Handover</fullName>
            </value>
            <value>
                <fullName>Interest waiver request</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
            <value>
                <fullName>Visit Proposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>