force-app/main/default/objects/Activity/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <label>Del_CallType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>