force-app/main/default/objects/Activity/fields/Campaign_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del Campaign Lookup</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>