force-app/main/default/objects/Activity/fields/CI_Form__c.field-meta.xml
<CustomField>
    <fullName>CI_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del CI Form</label>
    <referenceTo>CIF__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>