force-app/main/default/objects/Activity/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due (default)</fullName>
            </value>
            <value>
                <fullName>Paid with payment details received</fullName>
            </value>
            <value>
                <fullName>Paid with payment details pending</fullName>
            </value>
            <value>
                <fullName>Partially paid</fullName>
            </value>
            <value>
                <fullName>Promised to pay</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Non-collectible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>