force-app/main/default/objects/Activity/fields/Connected_Call_Flag__c.field-meta.xml
<CustomField>
    <fullName>Connected_Call_Flag__c</fullName>
    <formula>IF(TEXT(Call_Status__c) = &quot;Connected&quot;, 1, 0)</formula>
    <label>Connected Call Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>