force-app/main/default/objects/Activity/fields/CP_Activity__c.field-meta.xml
<CustomField>
    <fullName>CP_Activity__c</fullName>
    <label>CP Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Ads- FB</fullName>
            </value>
            <value>
                <fullName>Insta</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Insta reel</fullName>
            </value>
            <value>
                <fullName>FB page posts</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Whatsapp blast</fullName>
            </value>
            <value>
                <fullName>Portals</fullName>
            </value>
            <value>
                <fullName>Telecalling</fullName>
            </value>
            <value>
                <fullName>Referencing</fullName>
            </value>
            <value>
                <fullName>Cross-project</fullName>
            </value>
            <value>
                <fullName>Others- Mention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>