force-app/main/default/objects/Activity/fields/CP_Billing_Checklist__c.field-meta.xml
<CustomField>
    <fullName>CP_Billing_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Billing Checklist</label>
    <referenceTo>CP_Billing_Checklist__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>