force-app/main/default/objects/Activity/fields/CP_Meeting_Address__c.field-meta.xml
<CustomField>
    <fullName>CP_Meeting_Address__c</fullName>
    <label>CP Meeting Address</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>