force-app/main/default/objects/Activity/fields/CP_Status__c.field-meta.xml
<CustomField>
    <fullName>CP_Status__c</fullName>
    <label>Del CP / Corporate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>VCVP Confirmed</fullName>
            </value>
            <value>
                <fullName>Work in progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>