force-app/main/default/objects/Activity/fields/CRM_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Status__c</fullName>
    <label>Del_CRM Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected to the preferred agent</fullName>
            </value>
            <value>
                <fullName>Connected to the preferred agent phone</fullName>
            </value>
            <value>
                <fullName>Connected to another agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>