force-app/main/default/objects/Activity/fields/Customer_CRT_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_CRT_Id__c</fullName>
    <externalId>true</externalId>
    <label>Del Customer_CRT_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>