force-app/main/default/objects/Activity/fields/Demand_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Due_Date__c</fullName>
    <formula>Demand__r.Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Due Date</label>
    <type>Date</type>
</CustomField>