force-app/main/default/objects/Activity/fields/dialingCode__c.field-meta.xml
<CustomField>
    <fullName>dialingCode__c</fullName>
    <label>Del_dialingCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>