force-app/main/default/objects/Activity/fields/Disposition_Type__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Type__c</fullName>
    <label>Call Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>