force-app/main/default/objects/Activity/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <description>Also using for loan officer Email Id</description>
    <label>Del Email Id</label>
    <type>Email</type>
</CustomField>