force-app/main/default/objects/Activity/fields/emailAddress__c.field-meta.xml
<CustomField>
    <fullName>emailAddress__c</fullName>
    <description>web2lead enquiry fields</description>
    <label>Del_emailAddress</label>
    <type>Email</type>
</CustomField>