force-app/main/default/objects/Activity/fields/Engaged_with_Competition__c.field-meta.xml
<CustomField>
    <fullName>Engaged_with_Competition__c</fullName>
    <label>Engaged with Competition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spoke About Competition</fullName>
            </value>
            <value>
                <fullName>Not Visit Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>