force-app/main/default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Del Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked (5)</fullName>
            </value>
            <value>
                <fullName>Blocked (5)</fullName>
            </value>
            <value>
                <fullName>Hot (4)</fullName>
            </value>
            <value>
                <fullName>Warm (3)</fullName>
            </value>
            <value>
                <fullName>Cold (2)</fullName>
            </value>
            <value>
                <fullName>Lost (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>