force-app/main/default/objects/Activity/fields/Existing_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Existing_Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del Existing Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>