force-app/main/default/objects/Activity/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Del Facing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Garden Facing</fullName>
            </value>
            <value>
                <fullName>Bay/Sea Facing</fullName>
            </value>
            <value>
                <fullName>City Facing</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>